<resources>
    <string name="app_name">Sing Street</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="sign_in">登陆</string>
    <string name="sign_up">注册</string>
    <string name="nickname">昵称</string>
    <string name="repeat_password">重复密码</string>
    <string name="cancel">取消</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="login_fail">用户不存在或密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="register_warning">请准确填写好注册信息</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="number_of_follower">%d 关注者</string>
    <string name="number_of_following">%d 正在关注</string>
</resources>